public/assets/css/custom.css
/* ... */
.gtranslate_wrapper .gt_float_switcher {
    box-shadow: unset;
    /* border: 1px solid #DADEE2; */
    border-radius: 0;
    position: relative !important;
    z-index: 99;
    overflow: visible;
    background: transparent !important;
    width: 100%;
    height: 100%;
}

.gtranslate_wrapper .gt_float_switcher .gt-current-lang {
    padding: 13px 20px !important;
}

.gt_float_switcher .gt-selected .gt-current-lang {
    color: var(--select-color) !important;
}

.gtranslate_wrapper .gt_options {
    top: calc(100% + 8px);
    z-index: 9999;
    border-radius: 6px !important;
    border: 1px solid #dadee2;
    position: absolute !important;
    background: #fff;
}

.gtranslate_wrapper .gt_float_switcher .gt-selected {
    background-color: transparent;
}

.gtranslate_wrapper .gt_float_switcher img {
    width: 20px !important;
}

.gtranslate_wrapper .gt_float_switcher {
    font-size: 15px !important;
}

span.gt_float_switcher-arrow {
    filter: invert(1) !important;
}

.col-lg-6.btn-header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.search-wrapper {
    /*max-width:1200px;*/
    margin: 0px auto 60px auto;
    background: #3b3b3b;
    background: var(--banner-bg-color);
    padding: 20px;
    border-radius: 12px;
}

/* Tabs */
.tabs {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-bottom: 20px;
}

.tab {
    /* background: #2d2d2d; */
    color: var(--select-color);
    border: none;
    text-decoration: none;
    padding: 10px 22px;
    border-radius: 20px;
    cursor: pointer;
    font-size: 14px;
    line-height: 22px;
    font-weight: 700 !important;
}

.tab.active {
    background: #ff9d00;
    color: #000;
}

.help {
    margin-left: auto;
    color: #aaa;
    display: flex;
    align-items: center;
    gap: 8px;
}

.help a {
    color: #aaa;
    text-decoration: none;
}

/* Filter bar */
.filter-bar {
    border: 1px solid var(--border-color);
    /*border: 1px solid #DDE1DE33;*/
    border-radius: 10px;
    display: flex;
    align-items: center;
    padding: 20px;
    gap: 25px;
}

.filter {
    color: var(--select-color);
    min-width: 150px;
}

.filter label {
    font-size: 12px;
    color: #aaa;
    display: block;
    margin-bottom: 6px;
}

.select {
    display: flex;
    align-items: center;
    gap: 10px;
}

.select i {
    color: #ff9d00;
}

select {
    background: none;
    border: none;
    color: var(--select-color);
    /* color: #fff; */
    font-size: 14px;
    outline: none;
    line-height: 22px !important;
    font-weight: 700;
    width: 200px;
}

.filter-options {
    background: var(--banner-bg-color);
    border: none;
    color: var(--select-color);
    font-size: 14px;
    outline: none;
    line-height: 22px !important;
    font-weight: 700;
    width: 200px;
}

/* Divider */
.divider {
    width: 1px;
    height: 45px;
    background: #444;
}

/* Price */
.price input {
    width: 160px;
    accent-color: #f98e00;
}

.price-value {
    margin-top: 6px;
    color: #f0a500;
    font-size: 14px;
    line-height: 22px !important;
    font-weight: 700;
}

/* Button */
.search-btn {
    margin-left: auto;
    background: #ff9d00;
    border: none;
    color: #fff;
    padding: 14px 24px;
    border-radius: 30px;
    font-size: 15px;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 10px;
}

.banner-bg {
    background: url(../images/banner.png) no-repeat top right;
    background-size: 100% 100%;
    background-size: cover;
    margin: 20px 0 0 0;
    padding: 60px 0 90px 0;
    background-position: bottom;
    border-radius: 20px;
}

.browse-slider h2 {
    text-align: center;
    color: #fff;
    font-size: 36px;
    margin-bottom: 5px;
}

.browse-slider p {
    text-align: center;
    color: #ddd;
    margin-bottom: 30px;
}

/*.swiper{
    padding-bottom:40px;
}*/

.card {
    background: transparent;
    border-radius: 14px;
    text-align: center;
    border: none;
    text-decoration: none;
}

.card img {
    max-width: 100%;
    height: auto;
    object-fit: contain;
    border: #fff;
    border-radius: 13px;
}

.card span {
    font-size: 12px;
    background: #f1f1f1;
    padding: 5px 8px;
    border-radius: 20px;
    width: 55%;
    margin: 0 auto;
    color: #4d4d4d;
    position: relative;
    top: -12px;
    text-decoration: none !important;
    border: 1px solid #dde1de;
}

.support-btn {
    display: inline-flex;
    align-items: center;
    gap: 8px;
    margin-top: 10px;
    padding: 12px 28px;
    background: #f58d02;
    color: #fff;
    border-radius: 40px;
    font-size: 14px;
    font-weight: 600;
    text-decoration: none;
    transition: 0.3s;
}

.support-btn:hover {
    background: #e55f00;
    color: #fff;
}

.card h4 {
    margin: 0;
    font-size: 16px;
    font-weight: 600;
    color: #fff;
}

.vehicle-box {
    background: url(../images/vehicle-box.png) no-repeat top right;
}

.pre-approval-box {
    background: url(../images/pre-approval-box.png) no-repeat top right;
}

.secure-box {
    background-size: cover;
    padding: 25px 30px 20px 30px;
    display: flex;
    align-items: flex-end;
    height: 210px;
    border-radius: 15.09px;
    justify-content: space-between;
}

.secure-box h4 {
    font-size: 25px;
    color: #fff;
    letter-spacing: -1px;
}

.secure-box p {
    color: #878c91;
    font-size: 14px;
    width: 420px;
}

.secure-box i.fa-solid.fa-arrow-right {
    border: 1px solid #f58d02;
    color: #f58d02;
    width: 66.42px;
    border-radius: 52.83px;
    height: 42.26px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.5s linear;
    cursor: pointer;
}

.secure-box i.fa-solid.fa-arrow-right:hover {
    background: #f58d02;
    color: #000;
}

.section-two {
    padding: 50px 0;
}

.car-card {
    background: #2f2f2f;
    border-radius: 16px;
    padding: 14px;
    color: #fff;
}

.car-img {
    position: relative;
}
/* ... */

